--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,8 @@ body, header, h1, h2, h5, ul{
     padding: 0;
 }
 
+
+
 body{
     background-color: #e4e4e4;
 }
@@ -31,7 +33,7 @@ nav ul li{
     width: 45%;
     margin: 10px 0 0;
     text-align: center;
-    background-color:rgb(54,54,54);
+    /* background-color:rgb(54,54,54); */
 }
 
 nav ul li:nth-child(odd){
@@ -46,6 +48,15 @@ nav ul li a{
     color: #fff;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-decoration: none;
+}
+
+body > section {
+    display: none;
+}
+
+nav ul li img{
+    width: 50px;
+    height: 50px;
 }
 
 nav ul li:hover a, nav ul li a.active{
