--- a/src/css/style.css
+++ b/src/css/style.css
@@ -59,6 +59,11 @@ nav ul li img{
     height: 50px;
 }
 
+nav img{
+    width: 40px;
+    height: auto;
+}
+
 /*nav ul li:hover a, nav ul li a.active{
     color:rgb(219, 69,83);
 }
