--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,13 @@ nav img {
     height: auto;
 }
 
+/* buttons to update user info */
+/* Nascondi i bottoni "Save" e "Cancel" inizialmente */
+form div button:nth-of-type(2),
+form div button:nth-of-type(3) {
+    display: none;
+}
+
 /* Bootstrap-derived new layout */
 @media (min-width: 1400px) {
     .row-cols-xxl-7>* {
