--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,10 +8,10 @@ div.container.my-5.text-center.mb-4 img {
     height: auto;
 }
 
-.container-sm .row .card {
+/* .container-sm .row .card {
     width: 100px;
     height: 100px;
-}
+} */
 
 article div img, section.col header img, div.container section.row img{
     width: 20px;
