--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,8 +98,12 @@ input.bg-light-purple.border-0.text-purple:hover{
     background-color: rgba(155, 109, 198, 1) !important;
 }
 
+.bg-table{
+    background-color: rgb(185, 158, 225);
+}
+
 .bg-platinum{
-    background-color: rgba(234, 234, 234, 1) !important;
+    background-color: rgb(234, 234, 234) !important;
 }
 
 .bg-light-purple {
