changed color of card in account-user

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,7 +96,7 @@ input.bg-light-purple.border-0.text-purple:hover{
     background-color: rgba(155, 109, 198, 1) !important;
 }
 
-.bg-table{
+.bg-purple-mid{
     background-color: rgb(185, 158, 225);
 }
 
