--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,11 +18,6 @@ div.container-fluid>section.row>img {
     height: auto;
 }
 
-/* .container-sm .row .card {
-    width: 100px;
-    height: 100px;
-} */
-
 article div img,
 section.col header img,
 div.container section.row img,
@@ -145,4 +140,13 @@ textarea[name="description"] {
 .card-text {
     font-size: large;
     font-weight: 500;
+}
+
+.card-hover {
+    transition: transform 0.3s ease;
+}
+
+.card-hover:hover {
+    transform: scale(1.05);
+    z-index: 10;
 }
