--- a/src/css/style.css
+++ b/src/css/style.css
@@ -85,6 +85,46 @@ textarea[name="description"] {
     resize: none;
 }
 
+/* Magic card base style */
+.magic-card {
+    position: relative;
+    overflow: visible;
+    border: 2px solid rgb(234, 234, 234);
+}
+
+/* Particle container */
+.magic-particles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
+
+/* Particle style */
+.particle {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: radial-gradient(circle, var(--particle-color) 0%, rgba(0, 0, 0, 0) 70%);
+    border-radius: 50%;
+    animation: particle-animation 1s linear;
+    pointer-events: none;
+}
+
+@keyframes particle-animation {
+    0% {
+        transform: translate(0, 0) scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translate(var(--x), var(--y)) scale(0.5);
+        opacity: 0;
+    }
+}
+
 /* Custom Bootstrap-derived styles */
 @media (min-width: 1400px) {
     .row-cols-xxl-7>* {
@@ -149,44 +189,4 @@ textarea[name="description"] {
 .card-hover:hover {
     transform: scale(1.05);
     z-index: 10;
-}
-
-/* Stile di base per la card */
-.magic-card {
-    position: relative;
-    overflow: visible;
-    border: 2px solid rgb(234, 234, 234);
-}
-
-/* Contenitore delle particelle */
-.magic-particles {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-}
-
-/* Stile delle particelle */
-.particle {
-    position: absolute;
-    width: 10px;
-    height: 10px;
-    background: radial-gradient(circle, var(--particle-color) 0%, rgba(0, 0, 0, 0) 70%);
-    border-radius: 50%;
-    animation: particle-animation 1s linear;
-    pointer-events: none;
-}
-
-@keyframes particle-animation {
-    0% {
-        transform: translate(0, 0) scale(1);
-        opacity: 1;
-    }
-
-    100% {
-        transform: translate(var(--x), var(--y)) scale(0.5);
-        opacity: 0;
-    }
 }
