--- a/src/css/style.css
+++ b/src/css/style.css
@@ -129,6 +129,21 @@ textarea[name="description"] {
     }
 }
 
+input[type="checkbox"][role="switch"]:before,
+input[type="checkbox"][role="switch"]:focus {
+    box-shadow: none !important;
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(0,0,0,0.25)'/></svg>");
+}
+
+input[type="checkbox"][role="switch"]:checked {
+    background-color: rgb(185, 158, 225);
+    background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='rgba(255,255,255)'/></svg>");
+}
+
+input[type="checkbox"][role="switch"] {
+    background-color: rgb(203, 195, 227);
+}
+
 /* Custom Bootstrap-derived styles */
 @media (min-width: 1400px) {
     .row-cols-xxl-7>* {
